Bug 1029867: Remove useless nsCSSParser::mHTMLMediaMode. r=heycam

MozReview-Commit-ID: AFtd0G4oP3R